[package]
name = "affogato"
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["myyrakle <sssang97@naver.com>"] 
description = "simple HTTP Proxy" 
keywords = ["http", "proxy", "server"] 
readme = "./README.md"
repository = "https://github.com/myyrakle/affogato" 
documentation = "https://docs.rs/affogato/latest/affogato" 
homepage = "https://github.com/myyrakle/affogato/blob/master/README.md" 

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = "0.12.8"
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
log4rs = "1.3.0"
log = "0.4.22"
env_logger = "0.11.5"
